--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,12 @@
 {deps, [
   {erlexec, "1.1.0"}
 ]}.
+
+{profiles, [
+    {test, [
+        {deps, [
+        	{ulitos, "0.3.0"},
+        	{meck, "0.8.4"}
+        ]}
+	]}
+]}.
